--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,9 @@
         "variant": "cpp",
         "vector": "cpp",
         "algorithm": "cpp",
-        "__config": "cpp"
+        "__config": "cpp",
+        "charconv": "cpp",
+        "forward_list": "cpp",
+        "set": "cpp"
     }
 }
